--- a/limit_orders/pom.xml
+++ b/limit_orders/pom.xml
@@ -23,6 +23,19 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        
+		<dependency>
+    		<groupId>org.powermock</groupId>
+    		<artifactId>powermock-module-junit4</artifactId>
+    		<version>2.0.9</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.powermock</groupId>
+    		<artifactId>powermock-api-mockito</artifactId>
+   		    <version>1.7.4</version>
+    		<scope>test</scope>
+		</dependency>
     </dependencies>
 
     <properties>
